[tool.poetry]
name = "repl_python3_kemalettin"
version = "0.1.0"
description = ""
authors = ["Harun Gumus"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
praw = "^7.4.0"
discord = "^1.7.3"
bs4 = "^0.0.1"
requests = "^2.27.1"
urllib3 = "^1.26.9"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
